2003-09-23  Dan Jakubiec <firstname.lastname@systech.com>

	* src/emulate.cxx (get_hw_seconds): Modified the ticks-to-seconds
	conversion in the wallclock emulator's get_hw_seconds() function.
	The previous implementation would easily overflow for any
	reasonable date/tick-resolution combinations.

2003-09-19  Gary Thomas  <gary@mlbassoc.com>

	* tests/wallclock.cxx: Allow test to complete, even if it looses sync.
	This is useful to determine how much drift is present.

2003-03-25  Michael Checky <Michael_Checky@Thermoking.com>

	* include/wallclock/wallclock.inl: Added parens to TO_BCD() and TO_DEC()
	macros so macro argument is interpreted correctly.

2001-07-30  Jesper Skov  <jskov@redhat.com>

	* include/wallclock/wallclock.inl (_simple_mktime): Fix assertion
	for leap seconds.

2001-07-27  Jesper Skov  <jskov@redhat.com>

	* include/wallclock/wallclock.inl (_simple_mktime): Added some assertions.
	(_simple_mktime): Adjust assertions to correct and more sensible
	values.
	(_simple_mktime): A few more assertion tweaks.

2001-06-21  Jonathan Larmour  <jlarmour@redhat.com>

	* tests/wallclock2.cxx: No need to check for CYGINT_LIBC_STARTUP_CONTEXT
	as it is required by CYGPKG_LIBC_STARTUP.

2001-04-06  Jonathan Larmour  <jlarmour@redhat.com>

	* include/wallclock/wallclock.inl (_simple_mkdate): Fix small
	operator precedence bug.

2001-04-05  Nick Garnett  <nickg@cygnus.co.uk>

	* tests/wallclock.cxx: Don't run this test in any simulated
	environment. It just takes far too long and is always timed out by
	the testing infrastructure.

2000-11-22  Jesper Skov  <jskov@redhat.com>

	* src/wallclock.cxx: User driver API instead of scheduler lock.

	* cdl/wallclock.cdl: Emulation requires the kernel, as do the tests. 

2000-11-09  Jesper Skov  <jskov@redhat.com>

	* tests/wallclock2.cxx: Include string header.

2000-10-20  Jonathan Larmour  <jlarmour@redhat.com>

	* tests/wallclock2.cxx: Play better with main() startup configury
